fix: fixed styles when zooming and gap between inputs

--- a/src/app/features/auth/auth.component.scss
+++ b/src/app/features/auth/auth.component.scss
@@ -4,7 +4,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
   background-color: var(--background);
 }
 
@@ -34,6 +34,6 @@ main {
 @include breakpoint('laptop') {
   .form-wrapper {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
   }
 }
